# rgbd-odometry

./: CMakeLists.txt  LICENSE  README.md  package.xml
src/: dataPrepare.cpp  dataPrepare.h  depth2Pointclouds.cpp  depthImage.cpp  main.cpp  vo.cpp  vo.h
